@@ -27,7 +27,7 @@
         <module.name>com.github.hazendaz.jmockit.coverage.tests</module.name>
 
         <!-- Surefire Argline -->
-        <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/1.56.0/jmockit-1.56.0.jar=coverage --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+        <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/2.0.0/jmockit-2.0.0.jar=coverage</argLine>
 
         <slf4j.version>2.0.17</slf4j.version>
     </properties>
